--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- FUNCTION DOWNLOAD -->
     async function downloadVideo() {
         	let videoUrl = document.getElementById("videoUrl").value;
-        	const response = await fetch(`https://skizo.tech/api/tiktok?apikey=YOUR_KEY&url=${videoUrl}`);
+        	const response = await fetch(`https://skizo.tech/api/tiktok?apikey=avatar&url=${videoUrl}`);
             const data = await response.json()
             const resultUrl = data.data.play;
             window.open(resultUrl, '_blank');
