--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!-- isep dlu le.webp -->
-	
-<!-- Made by MannR. -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,38 +8,35 @@
     <title>TikTok Downloader</title>
     <style>
     .container {
-    width: 100%;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     h1 {
-    color: #007bff;
-    text-align: center;
+        color: #007bff;
+        text-align: center;
     }
     </style>
 </head>
-<body class="bg-gray-900 text-white h-screen flex flex-col justify-center items-center">
-	<div class="w-full max-w-lg">
-	<div class="container">
-    
-    <input type="text" id="videoUrl" placeholder="Enter url video tiktok..." class="w-full bg-gray-800 rounded-lg py-2 px-4 mb-4">
-    <div class="flex justify-center">
-    <button onclick="downloadVideo()" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg mb-4">Download</button>
-    
+<body class="bg-gray-900 text-white h-screen flex flex-col justify-center items-center" style="background-image: url('https://telegra.ph/file/abcba87f135d565147600.jpg'); background-size: cover;">
+    <div class="w-full max-w-lg">
+        <div class="container">
+            <input type="text" id="videoUrl" placeholder="Enter url video tiktok..." class="w-full bg-gray-800 rounded-lg py-2 px-4 mb-4">
+            <div class="flex justify-center">
+                <button onclick="downloadVideo()" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg mb-4">Download</button>
+            </div>
+        </div>
+    </div>
     <script>
-    <!-- FUNCTION DOWNLOAD -->
     async function downloadVideo() {
-        	let videoUrl = document.getElementById("videoUrl").value;
-        	const response = await fetch(`https://skizo.tech/api/tiktok?apikey=avatar&url=${videoUrl}`);
-            const data = await response.json()
-            const resultUrl = data.data.play;
-            window.open(resultUrl, '_blank');
-        }
+        let videoUrl = document.getElementById("videoUrl").value;
+        const response = await fetch(`https://skizo.tech/api/tiktok?apikey=avatar&url=${videoUrl}`);
+        const data = await response.json();
+        const resultUrl = data.data.play;
+        window.open(resultUrl, '_blank');
+    }
     </script>
-    </div>
-    </div>
-    </div>
 </body>
 </html>
