--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>TikTok Downloader</title>
+    <title>TikTok Downloader Kaizel</title>
     <style>
     .container {
         width: 100%;
@@ -25,7 +25,7 @@
         <div class="container">
             <input type="text" id="videoUrl" placeholder="Enter url video tiktok..." class="w-full bg-gray-800 rounded-lg py-2 px-4 mb-4">
             <div class="flex justify-center">
-                <button onclick="downloadVideo()" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg mb-4">Download</button>
+                <button onclick="downloadVideo()" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg mb-4">Download Dengan kaizel</button>
             </div>
         </div>
     </div>
