--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>TikTok Downloader Kaizel</title>
+    <title>TikTok Downloader</title>
     <style>
     .container {
         width: 100%;
@@ -14,28 +14,80 @@
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
-    h1 {
-        color: #007bff;
+    .footer {
         text-align: center;
+        padding: 30px 0;
+        background-color: rgba(0, 0, 0, 0.8);
+        color: white;
+        font-weight: bold;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 100;
+    }
+    .welcome {
+        position: fixed;
+        text-align: center;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(255, 255, 255, 0.9);
+        padding: 70px;
+        border-radius: 30px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        text-align: center;
+align-items: center;
+        justify-content: center;
+        z-index: 10;
+        color: black; /* Warna teks pesan sambutan */
+        max-width: 1000%; /* Lebar maksimum setengah layar */
+    }
+    .welcome-content {
+        font-size: 28px; /* Ukuran teks pesan sambutan */
     }
     </style>
 </head>
 <body class="bg-gray-900 text-white h-screen flex flex-col justify-center items-center" style="background-image: url('https://telegra.ph/file/abcba87f135d565147600.jpg'); background-size: cover;">
-    <div class="w-full max-w-lg">
+    <div class="footer">
+        <p>by Kazami | 2024</p>
+    </div>
+
+    <div id="welcomeMessage" class="welcome">
+        <img src="https://telegra.ph/file/38353ed8a2621a7b5a469.jpg" alt="Welcome Image" class="w-24 h-24 rounded-full mb-2 mx-auto">
+        <p class="welcome-content mb-4">Selamat datang di Downloader Kaizel</p>
+        <button onclick="closeWelcome()" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg">Oke</button>
+    </div>
+
+    <div class="w-full max-w-lg mt-20">
         <div class="container">
             <input type="text" id="videoUrl" placeholder="Enter url video tiktok..." class="w-full bg-gray-800 rounded-lg py-2 px-4 mb-4">
-            <div class="flex justify-center">
-                <button onclick="downloadVideo()" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg mb-4">Download Dengan kaizel</button>
+            <div class="flex justify-center space-x-2">
+                <button onclick="downloadVideo()" class="w-1/2 bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg mb-4">Download Video</button>
+                <button onclick="downloadAudio()" class="w-1/2 bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg mb-4">Download Audio</button>
             </div>
         </div>
     </div>
+
     <script>
+    function closeWelcome() {
+        document.getElementById("welcomeMessage").style.display = "none";
+    }
+
     async function downloadVideo() {
         let videoUrl = document.getElementById("videoUrl").value;
         const response = await fetch(`https://skizo.tech/api/tiktok?apikey=avatar&url=${videoUrl}`);
         const data = await response.json();
         const resultUrl = data.data.play;
         window.open(resultUrl, '_blank');
+    }
+
+    async function downloadAudio() {
+        let videoUrl = document.getElementById("videoUrl").value;
+        const response = await fetch(`https://skizo.tech/api/tiktok?apikey=avatar&url=${videoUrl}`);
+        const data = await response.json();
+        const audioUrl = data.data.music;
+        window.open(audioUrl, '_blank');
     }
     </script>
 </body>
